--- a/src/Historic/Historic.css
+++ b/src/Historic/Historic.css
@@ -7,23 +7,13 @@
   margin: auto;
 }
 
-header {
-  padding: 45px 15px;
+.order_list ul {
+  list-style-type: square;
+  background-color: black;
+  color: white;
 }
 
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td,
-th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
+.order_list li {
+  margin-bottom: 15px;
+  font-size: 16px;
 }
