--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
-div {
-  margin-top: 0px;
+body,
+html {
+  display: block;
+  padding: 0;
+  margin-top: 0;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+  font-family: 'Courier New';
 }
