--- a/src/ClientList/ClientList.css
+++ b/src/ClientList/ClientList.css
@@ -2,19 +2,72 @@
   box-sizing: border-box;
 }
 
-body,
-html {
-  display: block;
-  padding: 0;
-  margin-top: 0;
-  height: 100%;
-  width: 100%;
-  overflow-x: hidden;
-  font-family: 'Courier New';
+.Clients ul {
+  list-style-type: square;
+  background-color: black;
+  color: white;
 }
 
-.Clients {
-  width: 95%;
-  margin: auto;
+.Clients li {
+  margin-bottom: 15px;
   font-size: 14px;
+  cursor: pointer;
+}
+
+.Clients h1 {
+  font-size: 22px;
+}
+
+@media screen and (min-width: 480px) {
+  .Clients ul {
+    list-style-type: square;
+    background-color: black;
+    color: white;
+  }
+
+  .Clients li {
+    margin-bottom: 15px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+  .Clients h1 {
+    font-size: 30px;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .Clients ul {
+    list-style-type: square;
+    background-color: black;
+    color: white;
+  }
+
+  .Clients li {
+    margin-bottom: 15px;
+    font-size: 18px;
+    cursor: pointer;
+  }
+
+  .Clients h1 {
+    font-size: 40px;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .Clients ul {
+    list-style-type: square;
+    background-color: black;
+    color: white;
+  }
+
+  .Clients li {
+    margin-bottom: 15px;
+    font-size: 22px;
+    cursor: pointer;
+  }
+
+  .Clients h1 {
+    font-size: 50px;
+  }
 }
