--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -1,4 +1,4 @@
-* {
+ {
   box-sizing: border-box;
 }
 
@@ -20,8 +20,6 @@ ul {
 }
 
 .menu label[for='menu-toggle'] {
-  /* margin-top: 100px !important;*/
-
   cursor: pointer;
   color: #f5f5f5;
   font-weight: bold;
@@ -101,8 +99,6 @@ label,
   }
 
   .menu label[for='menu-toggle'] {
-    /* margin-top: 100px !important;*/
-
     cursor: pointer;
     color: #f5f5f5;
     font-weight: bold;
@@ -183,8 +179,6 @@ label,
   }
 
   .menu label[for='menu-toggle'] {
-    /* margin-top: 100px !important;*/
-
     cursor: pointer;
     color: #f5f5f5;
     font-weight: bold;
@@ -265,8 +259,6 @@ label,
   }
 
   .menu label[for='menu-toggle'] {
-    /* margin-top: 100px !important;*/
-
     cursor: pointer;
     color: #f5f5f5;
     font-weight: bold;
