--- a/src/delivers/delivers.css
+++ b/src/delivers/delivers.css
@@ -2,72 +2,72 @@
   box-sizing: border-box;
 }
 
-.historic_list ul {
+.delivers_list ul {
   list-style-type: square;
   background-color: black;
   color: white;
 }
 
-.historic_list li {
+.delivers_list li {
   margin-bottom: 15px;
-  font-size: 14px;
   cursor: pointer;
+  font-size: 14px;
 }
 
-.historic_list h1 {
+.delivers_list h1 {
   font-size: 22px;
 }
 
 @media screen and (min-width: 480px) {
-  .historic_list ul {
+  .delivers_list ul {
     list-style-type: square;
     background-color: black;
     color: white;
   }
 
-  .historic_list li {
+  .delivers_list li {
     margin-bottom: 15px;
     cursor: pointer;
     font-size: 16px;
   }
 
-  .historic_list h1 {
+  .delivers_list h1 {
     font-size: 30px;
   }
 }
 
 @media screen and (min-width: 800px) {
-  .historic_list ul {
+  .delivers_list ul {
     list-style-type: square;
     background-color: black;
     color: white;
   }
 
-  .historic_list li {
+  .delivers_list li {
     margin-bottom: 15px;
     cursor: pointer;
     font-size: 18px;
   }
 
-  .historic_list h1 {
+  .delivers_list h1 {
     font-size: 40px;
   }
 }
 
 @media screen and (min-width: 1600px) {
-  .historic_list ul {
+  .delivers_list ul {
     list-style-type: square;
     background-color: black;
     color: white;
   }
 
-  .historic_list li {
+  .delivers_list li {
     margin-bottom: 15px;
-    cursor: pointer;
     font-size: 22px;
+    cursor: pointer;
   }
 
-  .historic_list h1 {
+  .delivers_list h1 {
     font-size: 50px;
   }
 }
