--- a/src/addOrder/AddOrder.css
+++ b/src/addOrder/AddOrder.css
@@ -10,12 +10,18 @@ html {
 }
 
 p {
+  font-family: 'Courier New';
   text-align: center;
   color: red;
 }
 
 h1 {
   margin-left: 25px;
+  font-family: 'Courier New';
+}
+
+label {
+  font-family: 'Courier New';
 }
 
 label[for='phone'] {
@@ -58,6 +64,10 @@ label[for='Obs'] {
   text-align: left;
   color: black;
   font-size: 23px;
+}
+
+input {
+  font-family: 'Courier New';
 }
 
 #phone {
@@ -117,12 +127,18 @@ button {
   }
 
   h1 {
+    font-family: 'Courier New';
     margin-top: 80px;
     font-size: 50px;
   }
 
   label {
+    font-family: 'Courier New';
     width: 95px;
+  }
+
+  input {
+    font-family: 'Courier New';
   }
 
   label[for='phone'] {
@@ -229,10 +245,16 @@ button {
     width: 100%;
     text-align: center;
     font-size: 60px;
+    font-family: 'Courier New';
   }
 
   label {
     width: 90px;
+    font-family: 'Courier New';
+  }
+
+  input {
+    font-family: 'Courier New';
   }
 
   label[for='phone'] {
@@ -334,18 +356,25 @@ button {
 @media screen and (min-width: 1600px) {
   .orderAdd {
     width: 30%;
-    border: 2px solid red;
+
     margin: auto !important;
+  }
+
+  p {
+    text-align: left;
   }
 
   .addOrder h1 {
     margin-top: 70px !important;
     width: 100%;
-    margin-left: 35%;
+    text-align: left;
+
+    margin-left: 40%;
     font-size: 60px;
   }
 
   label {
+    font-family: 'Courier New';
     width: 110px;
   }
 
